fixed text spacing for mobile and arrow img

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,7 @@
 body {
   font: 0.75rem "Kumbh Sans", sans-serif;
   background: linear-gradient(gradients.$violet);
-  padding: 2rem 1.5rem;
+  padding: 2rem min(-2.25rem + 16vw, 1.5rem);
 }
 
 .card {
@@ -43,34 +43,42 @@ body {
       margin-top: 2rem;
 
       &__question {
-        margin-bottom: 0.5rem;
-        font-size: 0.8rem;
+        position: relative;
+        margin-top: 1rem;
+        padding-right: 1rem;
+        font-size: 0.85rem;
         color: colors.$dark-blue;
         list-style: none;
-
-        [open] & {
-          font-weight: 700;
-        }
 
         &:hover {
           color: colors.$red;
         }
-      }
 
-      &__answer {
-        position: relative;
+        [open] & {
+          font-weight: 700;
+        }
 
         &::after {
           content: url("../assets/icon-arrow-down.svg");
           position: absolute;
           right: 0;
           top: 0;
+          bottom: 0;
+          margin-block: auto;
+          max-height: 1rem;
+          transform: translateY(-10%);
 
-          details[open] & {
-            right: 20;
-            transform: rotate(180deg);
+          [open] & {
+            transform: rotate(0.5turn);
           }
         }
+      }
+
+      &__answer {
+        margin-top: 0.75rem;
+        font-size: 0.78rem;
+        line-height: 1.3;
+        color: colors.$text-grey;
       }
 
       & hr {
